samples/_failures_safe/1761460230_b6004f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d511a4c.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_9d511a4c.c:159:16: error: missing terminating " character
  159 |         printf("Line %
      |                ^~~~~~~
./samples/SAFE/__tmp_9d511a4c.c:159:9: error: expected expression at end of input
  159 |         printf("Line %
      |         ^~~~~~
./samples/SAFE/__tmp_9d511a4c.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d511a4c.c:159:9: error: expected declaration or statement at end of input
